--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "typescript": "^2.9.1"
+  },
+  "dependencies": {
+    "moment": "^2.22.2"
   }
 }
