--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/NQNStudios/davincibot#readme",
   "devDependencies": {
+    "@types/readline-sync": "^1.4.3",
     "chai": "^4.1.2",
     "coveralls": "^3.0.1",
     "istanbul": "^0.4.5",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "json2typescript": "^1.0.5",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "readline-sync": "^1.4.9"
   }
 }
