--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "module": "commonjs",
         "declaration": true,
         "outDir": "./dist",
-        "strict": true
+        "strict": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
         "./src/**/*.ts"
