--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^2.9.1"
   },
   "dependencies": {
+    "@types/node": "^10.3.2",
     "json2typescript": "^1.0.5",
     "moment": "^2.22.2",
     "readline-sync": "^1.4.9"
