--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@types/node": "^10.3.2",
-    "json2typescript": "^1.0.5",
     "moment": "^2.22.2",
+    "quick.db": "^6.3.1",
     "readline-sync": "^1.4.9"
   }
 }
