--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ version = "0.0.1"
 serde = "1.0.69"
 serde_derive = "1.0.69"
 serde_json = "1.0.22"
+mentat = { git = "https://github.com/mozilla/mentat" }
