--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ serde = "1.0.69"
 serde_derive = "1.0.69"
 serde_json = "1.0.22"
 mentat = { git = "https://github.com/mozilla/mentat" }
+mentat_cli = { git = "https://github.com/mozilla/mentat" }
