--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["Nat Quayle Nelson <natquaylenelson@gmail.com>"]
+authors = ["Nat Quayle Nelson <natquaylenelson@gmail.com>", "Sid Shanker <sshanker220@gmail.com>"]
 name = "davincibot"
 version = "0.0.1"
 [dependencies]
