--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_derive = "1.0.69"
 serde_json = "1.0.22"
 mentat = { git = "https://github.com/mozilla/mentat" }
 mentat_cli = { git = "https://github.com/mozilla/mentat" }
+clap = { version = "2.32.0", features = ["yaml"] }
