--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ serde_json = "1.0.22"
 mentat = { git = "https://github.com/mozilla/mentat" }
 mentat_cli = { git = "https://github.com/mozilla/mentat" }
 clap = { version = "2.32.0", features = ["yaml"] }
+text_io = "0.1.7"
+lazy_static = "1.0.1"
