--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ version = "0.0.1"
 serde = "1.0.69"
 serde_derive = "1.0.69"
 serde_json = "1.0.22"
-mentat = { git = "https://github.com/mozilla/mentat" }
-mentat_cli = { git = "https://github.com/mozilla/mentat" }
 clap = { version = "2.32.0", features = ["yaml"] }
 text_io = "0.1.7"
 lazy_static = "1.0.1"
+diesel = { version = "1.0.0", features = ["sqlite"] }
+dotenv = "0.9.0"
+subprocess = "0.1.13"
