--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0.22"
 clap = { version = "2.32.0", features = ["yaml"] }
 text_io = "0.1.7"
 subprocess = "0.1.13"
+rusqlite = "0.13.0"
