--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ exclude = [
 name = "davincibot"
 description="A command-line utility for managing absurdly eclectic interests."
 license="GPL-3.0"
-version = "0.0.2"
+version = "0.0.3"
 [dependencies]
 serde = "1.0.69"
 serde_derive = "1.0.69"
@@ -19,3 +19,4 @@ serde_json = "1.0.22"
 clap = { version = "2.32.0", features = ["yaml"] }
 subprocess = "0.1.13"
 rusqlite = "0.13.0"
+edit-rs = "0.1.1"
