--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,7 @@ description="A command-line utility for managing absurdly eclectic interests."
 license="GPL-3.0"
 version = "0.0.6"
 [dependencies]
-serde = "1.0.69"
-serde_json = "1.0.22"
-serde_yaml = "0.7"
+yaml-rust = "0.4"
 rusqlite = "0.13.0"
 edit-rs = "0.1.1"
 conv = "0.3.3"
