--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ authors = [
 name = "davincibot"
 description="A command-line utility for managing absurdly eclectic interests."
 license="GPL-3.0"
-version = "0.0.12"
+version = "0.0.13"
 [dependencies]
 yaml-rust = "0.4"
 rusqlite = "0.13.0"
 edit-rs = "0.1.1"
 conv = "0.3.3"
-rustyline = "2.0.0"
+rustyline = { git = "https://github.com/kkawakam/rustyline" }
